--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .caixa-principal{
-    background-color: var(--cor-principal);
+    background-color:  linear-gradient(#9999ff,#ccccff);
     width: 90%;
     max-width: 600px;
     text-align: center;
@@ -40,4 +40,5 @@ button {
 button:hover{
     background-color: var(--cor-destaque);
     color: var(--cor-principal);
+
 }
