--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: var(--cor-fundo);
+    background-color:  linear-gradient(#9999ff,#ccccff);
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
@@ -42,3 +42,4 @@ button:hover{
     color: var(--cor-principal);
 
 }
+
