--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-fundo:  linear-gradient(#9999ff,#ccccff);
     --cor-principal:  linear-gradient(#9999ff,#ccccff);
     --cor-secundaria: #212333; 
-    --cor-destaque: #2BDEFD;
+    --cor-destaque:  linear-gradient(#9999ff,#ccccff);
     --cor-texto: #D7F9FF;
 
 }
@@ -42,5 +42,6 @@ button:hover{
     color: var(--cor-principal);
 
 }
+
 
 
