--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
     background-color:  linear-gradient(#9999ff,#ccccff);
-    color: var(--cor-texto);
+    color:  linear-gradient(#9999ff,#ccccff);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +25,7 @@ body {
 }
 
 h1{
-    color: var(--cor-destaque);
+    color:  linear-gradient(#9999ff,#ccccff);
 }
 
 button {
@@ -42,6 +42,7 @@ button:hover{
     color: var(--cor-principal);
 
 }
+
 
 
 
