--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .caixa-principal{
-    background-color:  linear-gradient(#9999ff,#ccccff);
+    background-color:  var(--cor-fundo);
     width: 90%;
     max-width: 600px;
     text-align: center;
@@ -25,7 +25,7 @@ body {
 }
 
 h1{
-    color:  linear-gradient(#9999ff,#ccccff);
+    color:  var(--cor-secundaria);
 }
 
 button {
@@ -42,6 +42,7 @@ button:hover{
     color: var(--cor-principal);
 
 }
+
 
 
 
